--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -6,3 +6,6 @@ members = ["day-*"]
 [workspace.dependencies]
 color-eyre = "0.6.2"
 itertools = "0.12.0"
+nom = "7.1.3"
+nom-supreme = "0.8.0"
+rayon = "1.8.0"
