--- a/2023/day-07/Cargo.toml
+++ b/2023/day-07/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "{{project-name}}"
+name = "day-07"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 color-eyre.workspace = true
+thiserror.workspace = true
