--- a/2024/day-03/Cargo.toml
+++ b/2024/day-03/Cargo.toml
@@ -11,6 +11,7 @@ nom.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 miette.workspace = true
+thiserror.workspace = true
 regex = "1.11"
 
 [dev-dependencies]
