--- a/2024/justfile
+++ b/2024/justfile
@@ -11,8 +11,8 @@ test day part:
 bench-all:
     cargo bench -q > benchmarks.txt
 
-bench day part:
-    cargo bench --bench {{day}}-bench {{part}} >> {{day}}.bench.txt
+bench day:
+    cargo bench --bench {{day}}-bench > {{day}}/bench.txt
 
 # create the directory for a new day's puzzle and fetch the input
 create day:
