--- a/2024/daily-template/Cargo.toml
+++ b/2024/daily-template/Cargo.toml
@@ -22,3 +22,7 @@ test-log.workspace = true
 name = "{{project-name}}-bench"
 path = "benches/benchmarks.rs"
 harness = false
+
+[lints.clippy]
+pedantic = "warn"
+nursery = "warn"
